# supsmu

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test-python-publish.yml
src/: linear.c
src/supsmu/: __init__.py  _supsmu.pyi  _supsmu.pyx  supsmu.c  supsmu.h
supsmu/: linear.c  linear.h  local.c  local.h  supsmu.c  supsmu.h  test.c
tests/: conftest.py  test_supsmu.py
tests/data/: generate_data.py
tests/data/generate/: generate_data.py  generated_expected.R
