# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0.0", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supsmu"
version = "0.1.0"
description = "A package for supersmoother"
readme = "README.md"
requires-python = ">=3.10"
# license = {file = "LICENSE"}
authors = [
    {name = "Tux Type", email = "tuxtyped@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: C",
]
dependencies = [
    "numpy>=1.20.0",
    "cython>=3.0.11",
]


[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
]


[tool.setuptools]
package-dir = {"" = "src"}
packages = ["supsmu"]
ext-modules = [
    {name = "supsmu._supsmu", sources = [
        "src/supsmu/_supsmu.pyx",
        "src/supsmu/supsmu.c"
    ]}
]

[tool.setuptools.package-data]
supsmu = ["supsmu.h"]


